# OrdenarEnteros

./: .gitignore  CMakeLists.txt  CMakePresets.json  ESTRUCTURA_PROYECTO.md  GUIA_COMPILACION.md  INICIO_RAPIDO.md  README.md  RESUMEN.md  TESTS.md  build.sh  build_windows_portable.cmd  run_tests.sh
app/: CMakeLists.txt  main.cpp
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_debug/app/: Makefile  cmake_install.cmake
build_debug/examples/: Makefile  cmake_install.cmake
build_debug/lib/: Makefile  cmake_install.cmake  libordenamiento_lib.so.1.0.0
build_static/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_static/app/: Makefile  cmake_install.cmake
build_static/examples/: Makefile  cmake_install.cmake
build_static/lib/: Makefile  cmake_install.cmake  libgtest.so.1.14.0  libgtest_main.so.1.14.0  libordenamiento_lib.so.1  libordenamiento_lib.so.1.0.0
build_static/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_windows/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_windows/app/: Makefile  cmake_install.cmake
build_windows/examples/: Makefile  cmake_install.cmake
build_windows/lib/: Makefile  cmake_install.cmake
build_windows_static/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_windows_static/app/: Makefile  cmake_install.cmake
build_windows_static/examples/: Makefile  cmake_install.cmake
build_windows_static/lib/: Makefile  cmake_install.cmake
cmake/: OrdenarEnterosConfig.cmake.in
examples/: CMakeLists.txt  ejemplo1_basico.cpp  ejemplo2_strings.cpp  ejemplo3_objetos.cpp  ejemplo4_complejos.cpp
lib/: CMakeLists.txt
lib/include/: array.h  complex.h  sorting.h
lib/src/: complex.cpp  sorting.cpp
src/: CMakeLists.txt  int_sort.cpp  int_sort.h  main.cpp
tests/: CMakeLists.txt  README.md  test_array.cpp  test_complex.cpp  test_sorting.cpp
